Fix menu bar dark mode background

--- a/zoia_lib/UI/resources/dark.css
+++ b/zoia_lib/UI/resources/dark.css
@@ -9,6 +9,7 @@ QMessageBox {
 
 QMenu {
     border: #5e616e;
+    background: #000;
 }
 
 QMenu::separator
